<resources>
    <string name="app_name">Weather App</string>
    <string name="city_name">City Name</string>
    <string name="_23">23</string>
    <string name="today_s_weather_forecast">Today\'s Weather Forecast</string>
    <string name="condition">Condition</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="time">time</string>
    <string name="_20">20</string>
    <string name="_13">13</string>
    <string name="permission_description">Your GPS seems to be disabled, do you want to enable it?</string>
</resources>